# co_technical

./: README.md  co_technical  pyproject.toml  requirements.txt
docs/: exercise.md
examples/: move_before_place  move_out_of_bounds_ignored  report_without_place  with_invalid_commands
src/co_technical/: __init__.py  direction.py  position.py  program.py  robot.py  table.py
tests/: __init__.py
tests/integrations/: test_co_technical.py
tests/unit/: test_robot.py  test_table.py
